--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -51,38 +51,32 @@
     </table>
 </div>
 
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
 
 <script>
 
-    // $(document).ready(function () {
-    //      $("#btn-EntradaSaidaEstoque").click(function (event) {
-    //          event.preventDefault();
+    $(document).ready(function ModalEntradaSaidaEstoque() {
+        $('#btn-EntradaSaidaEstoque').on('click', function (event) {
+            event.preventDefault();
 
-    //         $.get("/Estoque/ModalEntradaSaidaEstoque", function (data) {
-    //              $("#modalTOLEAGRI").html(data);
-    //              $("#modalEntradaSaidaEstoque").modal("show");
-    //          });
-    //      });
-    //  });
+            $.get("/Estoque/ModalEntradaSaidaEstoque", function (data) {
+                $('#modalTOLEAGRI').html(data);
+                $('#modalEntradaSaidaEstoque').modal('show');
 
+            });
+        });
+    });
     function ModalDeletarEstoque(idPeca) {
         event.preventDefault();
-
         $.get("/Estoque/ModalDeletarEstoque?id=" + idPeca, function (data) {
-            $("#modalTOLEAGRI").html(data);
-            $("#modalDeletarEstoque").modal("show");
+            $('#modalTOLEAGRI').html(data);
+            $('#modalDeletarEstoque').modal('show');
+
+
         });
     }
-
-    //         function ModalSaidaEstoque(idEstoque) {
-    //             event.preventDefault();
-
-    //             $.get("/Estoque/ModalSaidaEstoque", function (data) {
-    //                 $("#modalTOLEAGRI").html(data);
-    //                 $("#modalSaidaEstoque").modal("show");
-    //             });
-    //         });
-    // });
 
 </script>
