--- a/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
@@ -36,7 +36,7 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<script>
+@* <script>
     // $(document).ready(function () {
     //         $'#btn-EntradaSaidaEstoque').on('click', function() {
     //     $.get("/Estoque/ModalEntradaSaidaEstoque"), function(data) {
@@ -75,7 +75,7 @@
         }
     });
 
-</script>
+</script> *@
 
 
 
