--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -25,6 +25,7 @@
                 <th>Marca</th>
                 <th>Modelo</th>
                 <th>Quantidade</th>
+                <th>Nota Fiscal ou Pedido</th>
                 <th>Observação</th>
                 <th>Data</th>
             </tr>
@@ -38,8 +39,9 @@
                     <td>@item.Marca</td>
                     <td>@item.Modelo</td>
                     <td>@item.Quantidade</td>
+                    <td>@item.NotaOuPedido</td>
                     <td>@item.Observacao</td>
-                    <td>@item.Data</td>
+                    <td>@item.Data.ToShortDateString()</td>
                     <td style="width:1px">
                         <a onClick="ModalDeletarEstoque(@item.Id)">
                             <i class="bi bi-trash3-fill"></i>
