Consegui resolver o fato de o modal de entrada e saida não conseguir abrir e fechar sem dar erro, o problema era a referencia de jquery na index.
Agora comecei a organizar os script dentro do arquivo site.js e então referenciar nas views para deixar mais organizado.

Porém um dos scripts precisa do jquery, e ao referenciar acaba dando o mesmo problema de antes.

Tenho que resolver essa incompatibilidade dos scripts de abertura de modal com o jquery.

--- a/Views/Estoque/Historico.cshtml
+++ b/Views/Estoque/Historico.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TOLEAGRI.Model.Domain.Peca>
 @{
-    ViewData["Title"] = "Pecas";
+    ViewData["Title"] = "Registros";
     var historicoList = Model.OrderByDescending(c => c.Data.Date).ToList();
 }
 
