--- a/Views/Estoque/Modal/EntradaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaEstoque.cshtml
@@ -34,102 +34,4 @@
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-@* <script>
-    // $(document).ready(function () {
-    //         $'#btn-EntradaSaidaEstoque').on('click', function() {
-    //     $.get("/Estoque/ModalEntradaSaidaEstoque"), function(data) {
-    //         $('#modalTOLEAGRI').html(data);
-    //         $('modalEntradaSaidaEstoque').modal('show');
-    //     });
-    //             });
-    $('#CodigoSistema').on('keypress', function (e) {
-        if (e.which === 13) { // Enter key pressed
-            e.preventDefault();
-            var codigoSistema = $(this).val();
-
-            // Enviar solicitação AJAX para verificar se o código do sistema já existe
-            $.ajax({
-                url: '/Estoque/GetByCodigoSistema',
-                type: 'GET',
-                data: { codigoSistema: codigoSistema },
-                success: function (data) {
-                    if (data) {
-                        // Preencher os campos do formulário com os detalhes da peça
-                        $('#Locacao').val(data.locacao);
-                        $('#Marca').val(data.marca);
-                        $('#Modelo').val(data.modelo);
-                        $('#Quantidade').val(data.quantidade);
-                        $('#Observacao').val(data.observacao);
-                    } else {
-                        // Limpar os campos do formulário se o código não existir
-                        $('#Locacao').val('');
-                        $('#Marca').val('');
-                        $('#Modelo').val('');
-                        $('#Quantidade').val(data.quantidade);
-                        $('#Observacao').val(data.observacao);
-                    }
-                }
-            });
-        }
-    });
-
-</script> *@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@* <script>
-    $(document).ready(function () {
-        $('#CodigoSistema').on('keypress', function (e) {
-            if (e.which === 13) { // 13 é o código da tecla "Enter"
-                event.preventDefault(); 
-                var codigoSistema = $(this).val();
-
-                $.ajax({
-                    url: '/Estoque/EntradaSaidaEstoque',
-                    type: 'GET',
-                    data: { codigoSistema: codigoSistema },
-                    success: function (data) {
-                        // Atualize os campos do modal com as informações retornadas
-                        if (data) 
-                        {
-                            $('#Locacao').val(data.locacao);
-                            $('#Marca').val(data.marca);
-                            $('#Modelo').val(data.modelo);
-                            $('#QuantidadeEntrada').val(data.quantidadeEntrada);
-                            $('#Observacao').val(data.observacao);
-                        }
-                        else 
-                        {
-                            $('#Locacao').val('');
-                            $('#Marca').val('');
-                            $('#Modelo').val('');
-                            $('#QuantidadeEntrada').val('');
-                            $('#Observacao').val('');
-                        }
-
-                    }
-
-                });
-            }
-        });
-    });
-</script> *@
+<script src="~/js/site.js"></script>
