--- a/Views/Estoque/Modal/SaidaEstoque.cshtml
+++ b/Views/Estoque/Modal/SaidaEstoque.cshtml
@@ -21,7 +21,7 @@
                         <input required asp-for="Locacao" type="text" class="form-control mb-2" id="Locacao" placeholder="Locação">
                         <input asp-for="Marca" type="text" class="form-control mb-2" id="Marca" placeholder="Marca">
                         <input asp-for="Modelo" type="text" class="form-control mb-2" id="Modelo" placeholder="Modelo">
-                        <input required asp-for="Quantidade" type="int" class="form-control mb-2" id="Quantidade" placeholder="Quantidade">
+                        <input required asp-for="Quantidade" value="" type="int" class="form-control mb-2" id="Quantidade" placeholder="Quantidade">
                         <input required asp-for="NotaOuPedido" type="int" class="form-control mb-2" id="NotaOuPedido" placeholder="Nota Fiscal/Pedido">
                         <input required asp-for="Observacao" type="text" class="form-control mb-2" id="Observacao" placeholder="Observação">
                     </div>
@@ -35,97 +35,4 @@
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-<script>
-
-    $('#CodigoSistema').on('keypress', function (e) {
-        if (e.which === 13) { // Enter key pressed
-            e.preventDefault();
-            var codigoSistema = $(this).val();
-
-            $.ajax({
-                url: '/Estoque/GetByCodigoSistema',
-                type: 'GET',
-                data: { codigoSistema: codigoSistema },
-                success: function (data) {
-                    if (data) {
-                        // Preencher os campos do formulário com os detalhes da peça
-                        $('#Locacao').val(data.locacao);
-                        $('#Marca').val(data.marca);
-                        $('#Modelo').val(data.modelo);
-                        $('#Quantidade').val(data.quantidade);
-                        $('#NotaOuPedido').val(data.notaoupedido);
-                        $('#Observacao').val(data.observacao);
-                    } else {
-                        // Limpar os campos do formulário se o código não existir
-                        $('#Locacao').val(data.locacao);
-                        $('#Marca').val(data.marca);
-                        $('#Modelo').val(data.modelo);
-                        $('#Quantidade').val(data.quantidade);
-                        $('#NotaOuPedido').val(data.notaoupedido);
-                        $('#Observacao').val(data.observacao);
-                    }
-                }
-            });
-        }
-    });
-
-</script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@* <script>
-    $(document).ready(function () {
-        $('#CodigoSistema').on('keypress', function (e) {
-            if (e.which === 13) { // 13 é o código da tecla "Enter"
-                event.preventDefault(); 
-                var codigoSistema = $(this).val();
-
-                $.ajax({
-                    url: '/Estoque/EntradaSaidaEstoque',
-                    type: 'GET',
-                    data: { codigoSistema: codigoSistema },
-                    success: function (data) {
-                        // Atualize os campos do modal com as informações retornadas
-                        if (data) 
-                        {
-                            $('#Locacao').val(data.locacao);
-                            $('#Marca').val(data.marca);
-                            $('#Modelo').val(data.modelo);
-                            $('#QuantidadeEntrada').val(data.quantidadeEntrada);
-                            $('#Observacao').val(data.observacao);
-                        }
-                        else 
-                        {
-                            $('#Locacao').val('');
-                            $('#Marca').val('');
-                            $('#Modelo').val('');
-                            $('#QuantidadeEntrada').val('');
-                            $('#Observacao').val('');
-                        }
-
-                    }
-
-                });
-            }
-        });
-    });
-</script> *@
+<script src="~/js/site.js"></script>
