Organizei e nomeei os métodos e etc
Unifiquei novamente os botões Entrada e Saida para Entrada/Saida, um modal só, um controller só e um serviço só. Assim fica mais limpo e organizado.

--- a/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
@@ -4,10 +4,10 @@
     Layout = null;
 }
 
-<div id="modalEntradaEstoque" class="modal" tabindex="-1">
+<div id="modalEntradaSaidaEstoque" class="modal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form id="formEntradaEstoque" method="post" asp-action="EntradaEstoque">
+            <form id="formEntradaEstoque" method="post" asp-action="EntradaSaidaEstoque">
                 <div class="modal-header">
                     <h5 class="modal-title">Entrada do Estoque</h5>
                 </div>
