--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -9,9 +9,8 @@
         <h1 class="text-center mb-3">Estoque</h1>
         <div class="mb-4" style="display:flex;justify-content:space-between">
             <div>
-                <a class="btn btn-outline-dark" onClick="ModalEntradaEstoque()" id="btn-EntradaEstoque">Entrada</a>
-                <a class="btn btn-outline-dark" onClick="ModalSaidaEstoque()" id="btn-SaidaEstoque">Saída</a>
-                <a type="button" asp-controller="Estoque" asp-action="Registros" class="btn btn-outline-dark">Registros</a>
+                <a class="btn btn-outline-dark" onClick="ModalEntradaSaidaEstoque()" id="btn-EntradaSaidaEstoque">Entrada/Saída</a>
+                <a type="button" asp-controller="Estoque" asp-action="Registro" class="btn btn-outline-dark">Registros</a>
             </div>
             <div style="display:flex">
                 <input type="text" id="Pesquisa" class="form-control" placeholder="Buscar">
