Criação de uma classe Registro e consequentemente servilço e controller também, para separar a criação dos registros no banco.

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="mb-4" style="display:flex;justify-content:space-between">
             <div>
                 <a class="btn btn-outline-dark" onClick="ModalEntradaSaidaEstoque()" id="btn-EntradaSaidaEstoque">Entrada/Saída</a>
-                <a type="button" asp-controller="Estoque" asp-action="Registro" class="btn btn-outline-dark">Registros</a>
+                <a type="button" asp-controller="Registro" asp-action="Registro" class="btn btn-outline-dark">Registro</a>
             </div>
             <div style="display:flex">
                 <input type="text" id="Pesquisa" class="form-control" placeholder="Buscar">
