Consegui resolver o problema da criação dos registros. Fiz um novo dominio para registrar somente os registros dentro do banco, evitando a duplicidade das Pecas cadastradas.

--- a/Views/Registro/Registro.cshtml
+++ b/Views/Registro/Registro.cshtml
@@ -1,4 +1,4 @@
-﻿@model IReadOnlyList<TOLEAGRI.Model.Domain.Registro>
+﻿@model IReadOnlyList<TOLEAGRI.Model.Domain.RegistroPeca>
 @{
     ViewData["Title"] = "Registro";
     var registroList = Model.OrderByDescending(c => c.Data.Date).ToList();
