Tentativa de configurar a pesquisa das pecas por codigo do sistema

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -13,7 +13,7 @@
                 <a type="button" asp-controller="Registro" asp-action="Registro" class="btn btn-outline-dark">Registro</a>
             </div>
             <div style="display:flex">
-                <input type="text" id="Pesquisa" class="form-control" placeholder="Buscar">
+                <input type="text" id="Pesquisa" class="form-control, search" onblur="this.placeholder = 'search'" placeholder="Buscar">
             </div>
         </div>
     </div>
