--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -11,6 +11,7 @@
             <div>
                 <a class="btn btn-outline-dark" onClick="ModalEntradaSaidaEstoque()" id="btn-EntradaSaidaEstoque">Entrada/Saída</a>
                 <a type="button" asp-controller="Registro" asp-action="Registro" class="btn btn-outline-dark">Registro</a>
+                <a type="button" asp-controller="Estoque" asp-action="Teste" class="btn btn-outline-dark">Teste</a>
             </div>
             <div style="display:flex">
                 <input type="text" id="search-input" class="form-control search" placeholder="Buscar" onkeydown="handleKeyDown(event)">
