Ainda tentando criar um layout bonito

--- a/Views/Estoque/Index.cshtml
+++ b/Views/Estoque/Index.cshtml
@@ -10,11 +10,10 @@
             <div>
                 <a class="btn btn-outline-dark" onClick="ModalEntradaSaidaEstoque()" id="btn-EntradaSaidaEstoque">Entrada/Saída</a>
             </div>
-            <div style="display:flex">
+            <div >
                 <input type="text" id="search-input" class="form-control search" placeholder="Buscar" onkeydown="handleKeyDown(event)">
                 @* <input type="text" id="Pesquisa" class="form-control, search" onblur="this.placeholder = 'search'" placeholder="Buscar"> *@
             </div>
-            <div img="~/NewFolder/logo.pn"></div>
         </div>
     </div>
     <table class="table table-striped">
