--- a/Views/Registro/Registro.cshtml
+++ b/Views/Registro/Registro.cshtml
@@ -9,10 +9,13 @@
         <div class="mb-4" style="display:flex;justify-content:space-between">
             <div style="display:flex">
                 <input type="text" id="search-input-registro" class="form-control search" placeholder="Buscar" onkeydown="handleKeyDownRegistro(event)">
+                <a id="search-input-icon">
+                    <img src="~/Images/Pesquisa.png" alt="Icon" style="width:25px;margin-top:10px;margin-left:5px" />
+                </a>
             </div>
         </div>
     </div>
-    <table class="table table-striped">
+    <table class="table">
         <thead>
             <tr>
                 <th>Código</th>
