--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,8 +17,19 @@ html {
   min-height: 100%;
 }
 
+header {
+    background: #393939;
+}
+
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background: #F7F5F4;
+    font-weight: bold;
+    
+}
+
+input{
+    opacity:75;
 }
 
 a {
